--- a/src/app/Login/loginpsi/loginpsi.component.css
+++ b/src/app/Login/loginpsi/loginpsi.component.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Dosis', sans-serif;
-  }
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 body{
     width:100vw;
