--- a/src/app/asignacion/asignacion.component.css
+++ b/src/app/asignacion/asignacion.component.css
@@ -86,6 +86,48 @@ tr.example-element-row:not(.example-expanded-row):active {
   opacity: 0.5;
 }
 
-.imgasignar{
+
+.detailbody{
+  width: 100%;
+  display: flex;
+  height: 100%;
+}
+
+.detailleft{
+  height: 100%;
+  width: 40%;
+}
+.detailleft img{
+  width: 100%;
+  height: 100%;
+}
+.detailrigth{
+  width: 60%;
+  height: 100%;
+}
+
+.group-item{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+
+}
+.item-info{
+  display: flex;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  flex-direction: column;
   
+color: #c5c5c5;
+font-weight: bold;
+}
+.item-info label{
+  font-size: 15px;
+}
+
+.detalleobse{
+  width: 100%;
+  display: flex;
 }
