--- a/src/app/asignacion/psicologo/psicologo.component.css
+++ b/src/app/asignacion/psicologo/psicologo.component.css
@@ -86,27 +86,24 @@ img{
   margin-right: 15px;
 }
 
-.cancelar{
-  background-color: rgb(238, 74, 74);
-  color: white;
+
+.mat-flat-button{
+  background-color: #dc3545 !important;
+  color: white !important;
+  margin-right: 15px
+  ;
   font-weight: bold;
-  border: none;
-  padding: 5px;
-  border-radius: 5px;
-  margin-right: 15px;
 }
-
-.asignar{
-  background-color: rgb(10, 146, 236);
-  color: white;
+.mat-raised-button{
+  background-color: #1e88e5 !important;
+  color: white !important;
   font-weight: bold;
-  border: none;
-  padding: 5px;
-  border-radius: 5px;
-  margin-right: 15px;
 }
-
-
+.mat-raised-button:disabled{
+  font-weight: bold;
+  background-color: #dcdcdc !important;
+  color: #a3a3a3 !important;
+}
 
 .pacientedata{
   display: flex;
