#1 Primer avance del caso - Registrar Datos Psicologo , routes e interfaz en 35%

--- a/src/app/Login/loginpsi/loginpsi.component.css
+++ b/src/app/Login/loginpsi/loginpsi.component.css
@@ -1,168 +1,160 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-body{
-    width:100vw;
-    height: 100vh;
-    position: absolute;
-    background-image:url('./fondo4.png');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    
-
-    
+body {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-image: url("./fondo4.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
-
-
-#btn-home{
-
-border: none;
-background-color: rgba(0, 0, 0, 0);
-position: absolute;
-width: 90px;
-color: white;
-font-weight: bold ;
-height: 30px;
-display: flex;
-align-items: center;
-font-style: normal;
-margin-top: 40px;
-margin-left: 150px;
-transition: 100ms ease;
-
+#btn-home {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  width: 90px;
+  color: white;
+  font-weight: bold;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  font-style: normal;
+  margin-top: 40px;
+  margin-left: 150px;
+  transition: 100ms ease;
 }
- #btn-home:hover{
-    border-bottom: 4px solid white;
-   
-   }
-   #btn-home mat-icon{
-     margin-right: 5px;
-     margin-bottom: 7px;
-   
-   }
-   
-.center{
-    width: 30vw;
-    display: flex;
-    height: 80vh;
-    background-color: black;
-    border-radius: 40px;
-    box-shadow: 2px 2px 10px #666;
-    margin-left: 65vw;
-    margin-top: 12vh;
-    position: absolute;
-    z-index:5;
+#btn-home:hover {
+  border-bottom: 4px solid white;
+}
+#btn-home mat-icon {
+  margin-right: 5px;
+  margin-bottom: 7px;
 }
 
-.body2{
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    text-align: center;
-    padding: 5%;
-    border-radius: 40px;
-}
-.img-fondo{
-    width: 80px;
-    margin: 15px auto 0px auto;
-    background-image: url('usuario.png');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 100px;
+.center {
+  width: 30vw;
+  display: flex;
+  height: 80vh;
+  background-color: black;
+  border-radius: 40px;
+  box-shadow: 2px 2px 10px #666;
+  margin-left: 65vw;
+  margin-top: 12vh;
+  position: absolute;
+  z-index: 5;
 }
 
-
-
-
-h4{
-    margin-top: 50px;
-    color: #00a99d;
-    font-weight: 900;
+.body2 {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  text-align: center;
+  padding: 5%;
+  border-radius: 40px;
+}
+.img-fondo {
+  width: 80px;
+  margin: 15px auto 0px auto;
+  background-image: url("usuario.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 100px;
 }
 
-.formulario{
-    
- 
-    margin: 40px auto  0px auto;
-    width: 100%;
-    height: 40%;
+h4 {
+  margin-top: 50px;
+  color: #00a99d;
+  font-weight: 900;
 }
 
-.user{
-   
-    margin-top: 20px;
+.formulario {
+  margin: 40px auto 0px auto;
+  width: 100%;
+  height: 40%;
 }
 
-.pass{
-    margin-top: 20px;
-    width: 100%;
-    height: 20%;
-
-}
-.eye{
-    position: absolute;
-    transform: translate(0,38%);
-    right: 22%;
-    font-size: 20px;
-}
-.username{
-    background-color: rgba(102, 102, 102, 0.3);
-    background-image: url('baseline_person_black_24dp.png');
-    background-repeat: no-repeat;
-    background-position: 10px center;
-    background-size: 20px;
-    border: none;
-    width: 65%;
-    height: 40px;
-    padding-left: 40px;
-    font-weight: 700;
-    font-size: 13px;
-    border-radius: 40px;
-    outline: none;
+.user {
+  margin-top: 20px;
 }
 
-.password{
-    background-color: rgba(102, 102, 102, 0.3);
-    background-image: url('baseline_lock_black_24dp.png');
-    background-repeat: no-repeat;
-    background-position: 10px center;
-    background-size: 18px;
-    border: none;
-    width: 65%;
-    height: 40px;
-    padding-left: 40px;
-    font-weight: 700;
-    font-size: 13px;
-    border-radius: 40px;
-    outline: none;
+.pass {
+  margin-top: 20px;
+  width: 100%;
+  height: 20%;
 }
-.password:hover{
- border-color: rgba(0, 169, 157, 0.5);
+.eye {
+  position: absolute;
+  transform: translate(0, 38%);
+  right: 22%;
+  font-size: 20px;
 }
-.password:focus{
-    border-color: rgba(0, 169, 157, 1);
-   }
-
-.username:hover{
-    border-color: rgba(0, 169, 157, 0.5);
-}
-.username:focus{
-    border-color: rgba(0, 169, 157, 1);
+.username {
+  background-color: rgba(102, 102, 102, 0.3);
+  background-image: url("baseline_person_black_24dp.png");
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  background-size: 20px;
+  border: none;
+  width: 65%;
+  height: 40px;
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 13px;
+  border-radius: 40px;
+  outline: none;
 }
 
+.password {
+  background-color: rgba(102, 102, 102, 0.3);
+  background-image: url("baseline_lock_black_24dp.png");
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  background-size: 18px;
+  border: none;
+  width: 65%;
+  height: 40px;
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 13px;
+  border-radius: 40px;
+  outline: none;
+}
+.password:hover {
+  border-color: rgba(0, 169, 157, 0.5);
+}
+.password:focus {
+  border-color: rgba(0, 169, 157, 1);
+}
 
-.login-btn{
-    border: none;
-    width: 150px;
-    font-weight: 700;
-    margin-top: 30px;
-    height: 35px;
-    border-radius: 40px;
-    background-color: #00a99d;
-    color: white;
+.username:hover {
+  border-color: rgba(0, 169, 157, 0.5);
+}
+.username:focus {
+  border-color: rgba(0, 169, 157, 1);
+}
+
+.login-btn {
+  border: none;
+  width: 150px;
+  font-weight: 700;
+  margin-top: 30px;
+  height: 35px;
+  border-radius: 40px;
+  background-color: #00a99d;
+  color: white;
+}
+
+.register-btn {
+  color: #00a99d;
+  text-decoration: none;
+}
+.target-btn {
+  margin-top: 10px;
 }
