--- a/src/app/asignacion/asignacion.component.html
+++ b/src/app/asignacion/asignacion.component.html
@@ -1,3 +1,5 @@
+
+
 <body>
 
   <div class="container">
@@ -265,7 +267,7 @@
 <!-- Modal Psicologo detalle-->
 <div class="modal fade bd-example-modal-lg" id="detallepsi" tabindex="-1"
   role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle"
@@ -348,7 +350,7 @@
 <!-- Modal Psicologo detalle-->
 <div class="modal fade bd-example-modal-lg" id="detalleultimo" tabindex="-1"
   role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle"
